--- a/app/views/party/parties/_address_fields.html.erb
+++ b/app/views/party/parties/_address_fields.html.erb
@@ -1,75 +1,62 @@
-<!-- app/views/party/parties/_address_fields.html.erb -->
-<div class="border rounded p-4 space-y-3" data-address-wrapper>
-  <%= f.hidden_field :_destroy, value: "0" %>
-
-  <!-- One controller wrapping BOTH country + region -->
-  <div
-    data-controller="dependent-select"
-    data-dependent-select-url-value="<%= ref_regions_path %>"
-  >
-    <!-- country_code -->
-    <label class="label"><span class="label-text">Country</span></label>
-    <%= f.collection_select :country_code, @countries, :code, :name,
-          { include_blank: "Select country" },
-          class: "select select-bordered w-full",
-          data: { "dependent-select-target": "country",
-                  action: "change->dependent-select#refresh" } %>
-
-    <!-- lines -->
-    <div class="grid md:grid-cols-2 gap-3 mt-3">
-      <div>
-    <label class="label"><span class="label-text">Address type</span></label>
-      <%= f.collection_select :address_type_code,
-            @address_types, :code, :name,
-            { include_blank: "Select type" },
-            class: "select select-bordered w-full" %>
-    </div>
-      <div>
-        <label class="label"><span class="label-text">Line 1</span></label>
-        <%= f.text_field :line1, class: "input input-bordered w-full" %>
-      </div>
-      <div>
-        <label class="label"><span class="label-text">Line 2</span></label>
-        <%= f.text_field :line2, class: "input input-bordered w-full" %>
-      </div>
-    </div>
-
-    <!-- locality / region / postal -->
-    <div class="grid md:grid-cols-3 gap-3 mt-3">
-      <div>
-        <label class="label"><span class="label-text">City / Locality</span></label>
-        <%= f.text_field :locality, class: "input input-bordered w-full" %>
-      </div>
-
-      <div>
-        <label class="label"><span class="label-text">Region / State</span></label>
-        <%= f.select :region_code, [],
-              { include_blank: "Select region" },
-              class: "select select-bordered w-full",
-              data: { "dependent-select-target": "region" },
-              "data-current": (f.object.respond_to?(:region_code) ? f.object.region_code : nil) %>
-      </div>
-
-      <div>
-        <label class="label"><span class="label-text">Postal code</span></label>
-        <%= f.text_field :postal_code, class: "input input-bordered w-full" %>
-      </div>
-    </div>
-    <div class="col-span-2 text-right">
-        <% if f.object.persisted? %>
-          <%= f.check_box :_destroy %>
-          <%= f.label :_destroy, "Remove", class: "text-sm" %>
-        <% else %>
-          <button type="button" class="btn btn-ghost btn-sm" data-action="nested-form#remove">Remove</button>
-        <% end %>
-      </div>
-    </div>
+<div class="grid md:grid-cols-6 gap-4">
+  <div class="md:col-span-2">
+    <label class="label"><span class="label-text">Type</span></label>
+    <%= f.collection_select :address_type_code, @address_types, :code, :name,
+          { include_blank: "Select type" }, class: "select select-bordered w-full" %>
   </div>
 
-  <div class="flex items-center justify-between mt-3">
-    <label class="cursor-pointer label">
-      <span class="label-text mr-2">Primary</span>
-      <%= f.check_box :is_primary, class: "toggle" %>
+  <div class="md:col-span-2">
+    <label class="label"><span class="label-text">Country</span></label>
+    <%= f.collection_select :country_code, @countries, :code, :name,
+          { selected: (f.object.country_code.presence || "US") },
+          class: "select select-bordered w-full" %>
+  </div>
+
+  <div class="md:col-span-2">
+    <label class="label"><span class="label-text">Region/State</span></label>
+    <%= f.text_field :region_code, class: "input input-bordered w-full", placeholder: "MI" %>
+  </div>
+
+  <div class="md:col-span-3">
+    <label class="label"><span class="label-text">Address line 1</span></label>
+    <%= f.text_field :line1, class: "input input-bordered w-full" %>
+  </div>
+
+  <div class="md:col-span-3">
+    <label class="label"><span class="label-text">Address line 2</span></label>
+    <%= f.text_field :line2, class: "input input-bordered w-full" %>
+  </div>
+
+  <div class="md:col-span-3">
+    <label class="label"><span class="label-text">Address line 3</span></label>
+    <%= f.text_field :line3, class: "input input-bordered w-full" %>
+  </div>
+
+  <div class="md:col-span-2">
+    <label class="label"><span class="label-text">City</span></label>
+    <%= f.text_field :locality, class: "input input-bordered w-full" %>
+  </div>
+
+  <div>
+    <label class="label"><span class="label-text">Postal code</span></label>
+    <%= f.text_field :postal_code, class: "input input-bordered w-full" %>
+  </div>
+
+  <div class="md:col-span-6 flex items-center justify-between">
+    <label class="label cursor-pointer gap-2">
+      <%= f.check_box :is_primary, class: "checkbox" %>
+      <span class="label-text">Primary</span>
     </label>
+
+    <% if f.object.persisted? %>
+      <% uid = "address_#{f.object.id}_destroy" %>
+      <div>
+        <%= f.check_box :_destroy, include_hidden: false, id: uid %>
+        <%= f.label :_destroy, "Remove", for: uid, class: "text-sm" %>
+      </div>
+    <% else %>
+      <%= f.hidden_field :_destroy, value: "0", id: nil %>
+      <button type="button" class="btn btn-ghost btn-sm" data-action="nested-form#remove">Remove</button>
+    <% end %>
   </div>
 </div>
