--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
           <div tabindex="0" class="dropdown-content z-10 bg-base-100 rounded-box shadow p-3 w-64">
             <div class="mb-2 text-sm font-semibold">Appearance</div>
             <div class="grid grid-cols-2 gap-2 text-sm">
-              <% ["corporate","business","light","dark","emerald","retro"].each do |t| %>
+              <% ["corporate","business","light","dark","emerald","retro","autumn","wireframe"].each do |t| %>
                 <label class="label cursor-pointer justify-start gap-2">
                   <input type="radio" name="theme" value="<%= t %>" class="theme-controller" />
                   <span><%= t.capitalize %></span>
